infra/network/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    toolkit.fluxcd.io/tenant: home-lab
